--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -9,8 +9,17 @@ permissions:
 jobs:
   run-autograding-tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.12", "3.13"]
     if: github.actor != 'github-classroom[bot]'
     steps:
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}      
+    - name: Display Python version
+      run: python -c "import sys; print(sys.version)"
     - name: Checkout code
       uses: actions/checkout@v4
     - name: test_1
