--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -8,16 +8,13 @@ permissions:
   contents: read
 jobs:
   run-autograding-tests:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.12", "3.13"]
+    runs-on: ubuntu-latest    
     if: github.actor != 'github-classroom[bot]'
     steps:
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}      
+        python-version: '3.13'    
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
     - name: Checkout code
